.metadata/.plugins/org.eclipse.cdt.ui/Grafos.build.log
11:22:00 **** Incremental Build of configuration Debug for project Grafos ****
make all 
Building file: ../main.cpp
Invoking: GCC C++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"main.d" -MT"main.o" -o "main.o" "../main.cpp"
../main.cpp:361:11: error: expected initializer before ‘tia’
 int main()tia
           ^
make: *** [main.o] Error 1
subdir.mk:18: fallo en las instrucciones para el objetivo 'main.o'

11:22:00 Build Finished (took 413ms)

